// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 1`] = `
<Link
  className="admin-link"
  to="/admin/users"
>
  <LinkAnchor
    className="admin-link"
    href="/admin/users"
    navigate={[Function]}
  >
    <a
      className="admin-link"
      href="/admin/users"
      onClick={[Function]}
    >
      <Button
        className="btn-links"
        color="outline"
      >
        <Wave
          disabled={false}
        >
          <button
            className="ant-btn ant-btn-default btn-links"
            color="outline"
            onClick={[Function]}
            type="button"
          >
            <LoadingIcon
              existIcon={false}
              loading={false}
              prefixCls="ant-btn"
            >
              <CSSMotion
                motionName="ant-btn-loading-icon-motion"
                onAppearActive={[Function]}
                onAppearStart={[Function]}
                onEnterActive={[Function]}
                onEnterStart={[Function]}
                onLeaveActive={[Function]}
                onLeaveStart={[Function]}
                removeOnLeave={true}
                visible={false}
              >
                <DomWrapper />
              </CSSMotion>
            </LoadingIcon>
            <span
              key=".0"
            >
              User Management
            </span>
          </button>
        </Wave>
      </Button>
    </a>
  </LinkAnchor>
</Link>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 2`] = `
<LinkAnchor
  className="admin-link"
  href="/admin/users"
  navigate={[Function]}
>
  <a
    className="admin-link"
    href="/admin/users"
    onClick={[Function]}
  >
    <Button
      className="btn-links"
      color="outline"
    >
      <Wave
        disabled={false}
      >
        <button
          className="ant-btn ant-btn-default btn-links"
          color="outline"
          onClick={[Function]}
          type="button"
        >
          <LoadingIcon
            existIcon={false}
            loading={false}
            prefixCls="ant-btn"
          >
            <CSSMotion
              motionName="ant-btn-loading-icon-motion"
              onAppearActive={[Function]}
              onAppearStart={[Function]}
              onEnterActive={[Function]}
              onEnterStart={[Function]}
              onLeaveActive={[Function]}
              onLeaveStart={[Function]}
              removeOnLeave={true}
              visible={false}
            >
              <DomWrapper />
            </CSSMotion>
          </LoadingIcon>
          <span
            key=".0"
          >
            User Management
          </span>
        </button>
      </Wave>
    </Button>
  </a>
</LinkAnchor>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 3`] = `
<a
  className="admin-link"
  href="/admin/users"
  onClick={[Function]}
>
  <Button
    className="btn-links"
    color="outline"
  >
    <Wave
      disabled={false}
    >
      <button
        className="ant-btn ant-btn-default btn-links"
        color="outline"
        onClick={[Function]}
        type="button"
      >
        <LoadingIcon
          existIcon={false}
          loading={false}
          prefixCls="ant-btn"
        >
          <CSSMotion
            motionName="ant-btn-loading-icon-motion"
            onAppearActive={[Function]}
            onAppearStart={[Function]}
            onEnterActive={[Function]}
            onEnterStart={[Function]}
            onLeaveActive={[Function]}
            onLeaveStart={[Function]}
            removeOnLeave={true}
            visible={false}
          >
            <DomWrapper />
          </CSSMotion>
        </LoadingIcon>
        <span
          key=".0"
        >
          User Management
        </span>
      </button>
    </Wave>
  </Button>
</a>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 4`] = `
<Link
  className="admin-link"
  to="/admin/teams"
>
  <LinkAnchor
    className="admin-link"
    href="/admin/teams"
    navigate={[Function]}
  >
    <a
      className="admin-link"
      href="/admin/teams"
      onClick={[Function]}
    >
      <Button
        className="btn-links"
        color="outline"
      >
        <Wave
          disabled={false}
        >
          <button
            className="ant-btn ant-btn-default btn-links"
            color="outline"
            onClick={[Function]}
            type="button"
          >
            <LoadingIcon
              existIcon={false}
              loading={false}
              prefixCls="ant-btn"
            >
              <CSSMotion
                motionName="ant-btn-loading-icon-motion"
                onAppearActive={[Function]}
                onAppearStart={[Function]}
                onEnterActive={[Function]}
                onEnterStart={[Function]}
                onLeaveActive={[Function]}
                onLeaveStart={[Function]}
                removeOnLeave={true}
                visible={false}
              >
                <DomWrapper />
              </CSSMotion>
            </LoadingIcon>
            <span
              key=".0"
            >
              Team Management
            </span>
          </button>
        </Wave>
      </Button>
    </a>
  </LinkAnchor>
</Link>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 5`] = `
<LinkAnchor
  className="admin-link"
  href="/admin/teams"
  navigate={[Function]}
>
  <a
    className="admin-link"
    href="/admin/teams"
    onClick={[Function]}
  >
    <Button
      className="btn-links"
      color="outline"
    >
      <Wave
        disabled={false}
      >
        <button
          className="ant-btn ant-btn-default btn-links"
          color="outline"
          onClick={[Function]}
          type="button"
        >
          <LoadingIcon
            existIcon={false}
            loading={false}
            prefixCls="ant-btn"
          >
            <CSSMotion
              motionName="ant-btn-loading-icon-motion"
              onAppearActive={[Function]}
              onAppearStart={[Function]}
              onEnterActive={[Function]}
              onEnterStart={[Function]}
              onLeaveActive={[Function]}
              onLeaveStart={[Function]}
              removeOnLeave={true}
              visible={false}
            >
              <DomWrapper />
            </CSSMotion>
          </LoadingIcon>
          <span
            key=".0"
          >
            Team Management
          </span>
        </button>
      </Wave>
    </Button>
  </a>
</LinkAnchor>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 6`] = `
<a
  className="admin-link"
  href="/admin/teams"
  onClick={[Function]}
>
  <Button
    className="btn-links"
    color="outline"
  >
    <Wave
      disabled={false}
    >
      <button
        className="ant-btn ant-btn-default btn-links"
        color="outline"
        onClick={[Function]}
        type="button"
      >
        <LoadingIcon
          existIcon={false}
          loading={false}
          prefixCls="ant-btn"
        >
          <CSSMotion
            motionName="ant-btn-loading-icon-motion"
            onAppearActive={[Function]}
            onAppearStart={[Function]}
            onEnterActive={[Function]}
            onEnterStart={[Function]}
            onLeaveActive={[Function]}
            onLeaveStart={[Function]}
            removeOnLeave={true}
            visible={false}
          >
            <DomWrapper />
          </CSSMotion>
        </LoadingIcon>
        <span
          key=".0"
        >
          Team Management
        </span>
      </button>
    </Wave>
  </Button>
</a>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 7`] = `
<Link
  className="admin-link"
  to="/admin/location/unit"
>
  <LinkAnchor
    className="admin-link"
    href="/admin/location/unit"
    navigate={[Function]}
  >
    <a
      className="admin-link"
      href="/admin/location/unit"
      onClick={[Function]}
    >
      <Button
        className="btn-links"
        color="outline"
      >
        <Wave
          disabled={false}
        >
          <button
            className="ant-btn ant-btn-default btn-links"
            color="outline"
            onClick={[Function]}
            type="button"
          >
            <LoadingIcon
              existIcon={false}
              loading={false}
              prefixCls="ant-btn"
            >
              <CSSMotion
                motionName="ant-btn-loading-icon-motion"
                onAppearActive={[Function]}
                onAppearStart={[Function]}
                onEnterActive={[Function]}
                onEnterStart={[Function]}
                onLeaveActive={[Function]}
                onLeaveStart={[Function]}
                removeOnLeave={true}
                visible={false}
              >
                <DomWrapper />
              </CSSMotion>
            </LoadingIcon>
            <span
              key=".0"
            >
              Location Units
            </span>
          </button>
        </Wave>
      </Button>
    </a>
  </LinkAnchor>
</Link>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 8`] = `
<LinkAnchor
  className="admin-link"
  href="/admin/location/unit"
  navigate={[Function]}
>
  <a
    className="admin-link"
    href="/admin/location/unit"
    onClick={[Function]}
  >
    <Button
      className="btn-links"
      color="outline"
    >
      <Wave
        disabled={false}
      >
        <button
          className="ant-btn ant-btn-default btn-links"
          color="outline"
          onClick={[Function]}
          type="button"
        >
          <LoadingIcon
            existIcon={false}
            loading={false}
            prefixCls="ant-btn"
          >
            <CSSMotion
              motionName="ant-btn-loading-icon-motion"
              onAppearActive={[Function]}
              onAppearStart={[Function]}
              onEnterActive={[Function]}
              onEnterStart={[Function]}
              onLeaveActive={[Function]}
              onLeaveStart={[Function]}
              removeOnLeave={true}
              visible={false}
            >
              <DomWrapper />
            </CSSMotion>
          </LoadingIcon>
          <span
            key=".0"
          >
            Location Units
          </span>
        </button>
      </Wave>
    </Button>
  </a>
</LinkAnchor>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page: links on home page 9`] = `
<a
  className="admin-link"
  href="/admin/location/unit"
  onClick={[Function]}
>
  <Button
    className="btn-links"
    color="outline"
  >
    <Wave
      disabled={false}
    >
      <button
        className="ant-btn ant-btn-default btn-links"
        color="outline"
        onClick={[Function]}
        type="button"
      >
        <LoadingIcon
          existIcon={false}
          loading={false}
          prefixCls="ant-btn"
        >
          <CSSMotion
            motionName="ant-btn-loading-icon-motion"
            onAppearActive={[Function]}
            onAppearStart={[Function]}
            onEnterActive={[Function]}
            onEnterStart={[Function]}
            onLeaveActive={[Function]}
            onLeaveStart={[Function]}
            removeOnLeave={true}
            visible={false}
          >
            <DomWrapper />
          </CSSMotion>
        </LoadingIcon>
        <span
          key=".0"
        >
          Location Units
        </span>
      </button>
    </Wave>
  </Button>
</a>
`;
